--- a/src/components/modules/Pagination.module.css
+++ b/src/components/modules/Pagination.module.css
@@ -1,4 +1,4 @@
-.pagination{
+/* .pagination{
     width: 400px;
     display: flex;
     justify-content: space-between;
@@ -32,4 +32,4 @@
 
 .selected{
     background-color: #3874ff;
-}
+} */
